--- a/coco_app/src/app/app.component.html
+++ b/coco_app/src/app/app.component.html
@@ -5,10 +5,10 @@
 <!--<app-message></app-message>
 <app-message></app-message>
 <app-ordi></app-ordi>-->
-<app-counter name="Premier" [initialValue]="1" [incrementValue]="20" (incrementCountEvent)="logCountMessages($event)"></app-counter>
+<!--<app-counter name="Premier" [initialValue]="1" [incrementValue]="20" (incrementCountEvent)="logCountMessages($event)"></app-counter>
 <app-counter name="2" [initialValue]="1" [incrementValue]="20" [decrementValue]="20" (incrementCountEvent)="logCountMessages($event)"></app-counter>
 <app-counter name="3" [incrementValue]="20" (incrementCountEvent)="logCountMessages($event)"></app-counter>
-<app-counter name="4" (incrementCountEvent)="logCountMessages($event)"></app-counter>
-
+<app-counter name="4" (incrementCountEvent)="logCountMessages($event)"></app-counter>-->
+<app-productlist></app-productlist>
 <!--<app-user></app-user>-->
 
